--- a/package.json
+++ b/package.json
@@ -10,13 +10,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.7.2",
     "@headlessui/react": "^2.2.0",
+    "@types/jquery": "^3.5.32",
+    "@types/react-owl-carousel": "^2.2.1",
+    "classnames": "^2.5.1",
     "i18next": "^24.2.0",
     "i18next-browser-languagedetector": "^8.0.2",
     "i18next-http-backend": "^3.0.1",
+    "jquery": "^3.7.1",
+    "lucide-react": "^0.469.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-i18next": "^15.2.0",
+    "react-owl-carousel": "^2.3.3",
     "react-router-dom": "^7.1.1"
   },
   "devDependencies": {
